# naive_vulkan

./: .gitignore  README.md
JNIView2/app/: build.gradle
JNIView2/app/src/androidTest/java/com/example/jniview2/: ExampleInstrumentedTest.kt
JNIView2/app/src/main/: AndroidManifest.xml
JNIView2/app/src/main/assets/shader/: comp_1.spv  comp_2.spv  vulkan_1.comp  vulkan_2.comp
JNIView2/app/src/main/cpp/: CMakeLists.txt  naive_vulkan  native-lib.cpp  vulkan_wrapper.cpp  vulkan_wrapper.h
JNIView2/app/src/main/java/com/example/jniview2/: MainActivity.kt
JNIView2/app/src/main/res/layout/: activity_main.xml  content_main.xml
JNIView2/app/src/main/res/menu/: menu_main.xml
JNIView2/app/src/main/res/values/: strings.xml
JNIView2/app/src/test/java/com/example/jniview2/: ExampleUnitTest.kt
JNIView2/gradle/wrapper/: gradle-wrapper.properties
untitled_1/: CMakeLists.txt  README.md  main.cpp
untitled_1/include/naive_vulkan/: vulkan.hpp
untitled_1/include/vulkan/: vulkan.hpp
untitled_1/shaders/: comp_1.spv  test_1.comp  test_1.spv  test_2.comp  test_2.spv  vulkan_1.comp
